
Phase Monitor
* Fixed: Removed incorrect calls to the Phase Monitor's percent based objectives for unseen units.

Ready Check
* New: Added Fish Hot Pot (Cleric, Mage, Medium, 60)
* New: Added Feast of Domination SP (Cleric, Mage, High, 60)

Frozen Tempest
* Crucia
** New: Added Tempest Assault Frame unit tracking.
** New: Added Stormcore Annihilator unit tracking.

Empyrean Core (Normal)
* Core Meltown
** Fixed: Corrected name of Encounter.

Translations
* German SL Boss updates.
* French SL Boss updates.

----
v1.3.5

Rez Master
* New: Cleric, Added Defiler's Death's Embrace combat res. (Thanks Arisae!)

Phase Monitor
* Change: The Phase Monitor has been adjusted to allow for tracking of multiple units with the same name.

Encounter Checking
* Change: Phase Monitor linking now occurs when a new Encounter Unit is detected.
* Change: Event.KingMolinator.Encounter.Start/End now send the Mod in the encounter table. {Type = String, Mod = ModObj}
* Note: All relevant data can be extrapolated from the ModObj.
* Note: Type will be "start" for .Start and "wipe" or "victory" for .End

Unit Tracking
* Change: Units now attempt to activate as idle regardless of their "seen" state. This includes them doing damage, and receiving indirect AoE.
* Change: Units in the Idle state "unseen", should now update their HP values based on Heal/Damage/Death events via UID.
* Note: The above changes directly effect the Plug-in KBM:Add-Watch, and you should now see HP updates for faded (unseen) units in an encounter.

Unit Cache
* Change: Reference Lists for missing UTIDs are compiled fresh each run.

Misc
* New: Add command /kbmability : This will list all abilities available to your character along with their Ability ID.

Rift:Storm Legion

Raids
* Endless Eclipse
** Dread Lord Goloch
** Matriarch of Pestilence
** Progenitor
** Kain the Reaper

* Frozen Tempest
** Gangnum
** Gelidra
** Kolmasveli and Toinenveli
** Zaviel
** Crucia

Slivers
* Triumph of the Dragon Queen