@@ -161,38 +161,39 @@ end
 
 function MOD:UnitHPCheck(uDetails, unitID)	
 	if uDetails and unitID then
-		if not uDetails.player then
-			if uDetails.name == self.Dominax.Name then
-				if not self.EncounterRunning then
-					self.EncounterRunning = true
-					self.StartTime = Inspect.Time.Real()
-					self.HeldTime = self.StartTime
-					self.TimeElapsed = 0
-					self.Dominax.Dead = false
-					self.Dominax.Casting = false
-					if self.Dominax.UTID[1] == uDetails.type then
-						self.PhaseObj:Start(self.StartTime)
-						self.PhaseObj:SetPhase("1")
-						self.PhaseObj.Objectives:AddPercent(self.Dominax.Name, 0, 100)
-						self.Phase = 1
-					end
+		local BossObj = self.UTID[uDetails.type]
+		if BossObj then
+			BossObj.Type = uDetails.type
+			BossObj.UnitID = unitID
+			if not self.EncounterRunning then
+				self.EncounterRunning = true
+				self.StartTime = Inspect.Time.Real()
+				self.HeldTime = self.StartTime
+				self.TimeElapsed = 0
+				BossObj.Dead = false
+				BossObj.Casting = false
+				self.Timeout = 25
+				if self.Dominax.UTID[1] == uDetails.type then
+					self.PhaseObj:Start(self.StartTime)
+					self.PhaseObj:SetPhase("1")
+					self.PhaseObj.Objectives:AddPercent(self.Dominax, 0, 100)
+					self.Phase = 1
 				end
-				self.Dominax.Type = uDetails.type
-				if self.Dominax.Type == self.Dominax.UTID[2] then
-					if self.Phase == 1 then
-						self.PhaseFinal()
-					end
-				end
-				if self.Dominax.UnitID ~= unitID then
-					if self.Dominax.CastBar.Active then
-						self.Dominax.CastBar:Remove()
-					end
-					self.Dominax.CastBar:Create(unitID)
-					self.Dominax.UnitID = unitID
-				end
-				self.Dominax.Available = true
-				return self.Dominax
 			end
+			if BossObj.Type == self.Dominax.UTID[2] then
+				if self.Phase == 1 then
+					self.PhaseFinal()
+					self.Timeout = 0
+				end
+			end
+			if BossObj.UnitID ~= unitID then
+				if BossObj.CastBar.Active then
+					BossObj.CastBar:Remove()
+				end
+				BossObj.CastBar:Create(unitID)
+			end
+			BossObj.Available = true
+			return BossObj
 		end
 	end
 end
