@@ -65,25 +65,30 @@ MF.Lang.Unit = {}
 MF.Lang.Unit.Maelforge = KBM.Language:Add(MF.Maelforge.Name)
 MF.Lang.Unit.Maelforge:SetGerman("Flammenmaul")
 MF.Lang.Unit.Maelforge:SetFrench()
-MF.Lang.Unit.Maelforge:SetRussian("Маэлфорж")
+MF.Lang.Unit.Maelforge:SetRussian("Маэлфордж")
 MF.Lang.Unit.Maelforge:SetKorean("마엘포지")
 MF.Lang.Unit.Cannon = KBM.Language:Add("Magma Cannon")
 MF.Lang.Unit.Cannon:SetGerman("Magmakanone")
 MF.Lang.Unit.Cannon:SetFrench("Canon à magma")
+MF.Lang.Unit.Cannon:SetRussian("Магмовая пушка")
 MF.Lang.Unit.CanShort = KBM.Language:Add("Cannon")
 MF.Lang.Unit.CanShort:SetGerman("Kanone")
 MF.Lang.Unit.CanShort:SetFrench("Canon")
+MF.Lang.Unit.CanShort:SetRussian("Пушка")
 MF.Lang.Unit.Egg = KBM.Language:Add("Ember Egg")
 MF.Lang.Unit.Egg:SetGerman("Glutei")
 MF.Lang.Unit.Egg:SetFrench("Œuf de braise")
+MF.Lang.Unit.Egg:SetRussian("Раскаленное яйцо")
 MF.Lang.Unit.EggShort = KBM.Language:Add("Egg")
 MF.Lang.Unit.EggShort:SetGerman("Ei")
 MF.Lang.Unit.EggShort:SetFrench("Œuf")
+MF.Lang.Unit.EggShort:SetRussian("Яйцо")
 
 -- Ability Dictionary
 MF.Lang.Ability = {}
 MF.Lang.Ability.Blast = KBM.Language:Add("Molten Blast")
 MF.Lang.Ability.Blast:SetGerman("Geschmolzene Explosion")
+MF.Lang.Ability.Blast:SetRussian("Взрыв расплава")
 MF.Lang.Ability.Heat = KBM.Language:Add("Blinding Heat")
 MF.Lang.Ability.Heat:SetGerman("Blendende Hitze") 
 
@@ -92,9 +97,11 @@ MF.Lang.Notify = {}
 MF.Lang.Notify.PhaseTwo = KBM.Language:Add("Maelforge: Carcera, I will break you and spill your doom across this world. These weaklings shall be the first to die.")
 MF.Lang.Notify.PhaseTwo:SetFrench("Maelforge : Carcera, je vous anéantirai et répandrai vos restes sur ce monde. Ces misérables seront les premiers à périr.")
 MF.Lang.Notify.PhaseTwo:SetGerman("Flammenmaul: Carcera, ich werde Euch zerbrechen und Unheil über diese Welt bringen. Diese Schwächlinge werden als Erste sterben.")
+MF.Lang.Notify.PhaseTwo:SetRussian("Маэлфордж: Карцера, я сокрушу тебя, и ты разделишь свою погибель со всем миром. А эти слизни умрут первыми.")
 MF.Lang.Notify.PhaseFinal = KBM.Language:Add("Maelforge: My children will taste your flesh. You whet the appetite of apocalypse.")
 MF.Lang.Notify.PhaseFinal:SetFrench("Maelforge : Ma descendance se repaîtra de votre chair. Vous aiguiserez la voracité de l'apocalypse.")
 MF.Lang.Notify.PhaseFinal:SetGerman("Flammenmaul: Meine Brut wird Euer Fleisch kosten. Ihr nährt das Verlangen der Apokalypse.")
+MF.Lang.Notify.PhaseFinal:SetRussian("Маэлфордж: Мои дети вкусят твою плоть. Ты - закуска на последнем пиру.")
 MF.Lang.Notify.Victory = KBM.Language:Add("Carcera: This world is saved from abomination, but its doom rises on ashen wings.")
 MF.Lang.Notify.Victory:SetFrench("Carcera : Le monde est sauvé de ces abominations, mais son destin se construit sur une terre en cendres. Ce lieu était autrefois le foyer sacré de mes adorateurs qui, avant que je ne tombe dans l'oubli, exécutaient des sacrifices en mon honneur. Ces roches réveillent en moi le souvenir de l'odeur du sang et de la chair calcinée.")
 MF.Lang.Notify.Victory:SetGerman("Carcera: Diese Welt wurde vor Schrecken bewahrt, aber das Unheil erhebt sich auf äschernen Schwingen. Diese Kammer war einst eine heilige Stätte, wo ich angebetet wurde. Sie brachten mir zu Ehren Opfer dar, bevor ich in Vergessenheit geriet. Diese Felsen erinnern den Geruch von kochendem Blut und brennendem Fleisch.") 
@@ -104,6 +111,7 @@ MF.Lang.Debuff = {}
 MF.Lang.Debuff.Hell = KBM.Language:Add("Hellfire")
 MF.Lang.Debuff.Hell:SetGerman("Höllenfeuer")
 MF.Lang.Debuff.Hell:SetFrench("Feux de l'enfer")
+MF.Lang.Debuff.Hell:SetRussian("Адское пламя")
 MF.Lang.Debuff.Melt = KBM.Language:Add("Melt Armor")
 MF.Lang.Debuff.Melt:SetFrench("Fonte d'armure")
 MF.Lang.Debuff.Melt:SetGerman("Geschmolzene Rüstung")
@@ -113,7 +121,7 @@ MF.Lang.Descript = {}
 MF.Lang.Descript.Main = KBM.Language:Add("Maelforge - Ember Eggs")
 MF.Lang.Descript.Main:SetGerman("Flammenmaul - Gluteier")
 MF.Lang.Descript.Main:SetFrench("Maelforge - Œufs de braise")
-
+MF.Lang.Descript.Main:SetRussian("Раскаленные Яйца")
 MF.Maelforge.Name = MF.Lang.Unit.Maelforge[KBM.Lang]
 MF.Maelforge.NameShort = MF.Lang.Unit.Maelforge[KBM.Lang]
 MF.Descript = MF.Lang.Descript.Main[KBM.Lang]
